erDiagram
  tbl_users ||--o{ tbl_org_members : joins
  tbl_organizations ||--o{ tbl_org_members : has

  tbl_users ||--o{ tbl_subscriptions : owns
  tbl_mstr_plans ||--o{ tbl_subscriptions : governs
  tbl_subscriptions ||--o{ tbl_license_assignments : grants
  tbl_users ||--o{ tbl_license_assignments : receives

  tbl_organizations ||--o{ tbl_products : owns
  tbl_users ||--o{ tbl_products : created_by
  tbl_products ||--o| tbl_configurators : has
  tbl_products ||--o{ tbl_hotspots : has
  tbl_products ||--o{ tbl_jobs : has
  tbl_products ||--o{ tbl_publish_links : publishes
  tbl_organizations ||--o{ tbl_assets : stores
  tbl_products ||--o{ tbl_gallery_items : listed_in
  tbl_galleries ||--o{ tbl_gallery_items : contains

  tbl_organizations ||--o{ tbl_analytics_events : records
  tbl_products ||--o{ tbl_analytics_events : records
  tbl_publish_links ||--o{ tbl_analytics_events : via
  tbl_organizations ||--o{ tbl_analytics_daily_product : aggregates
  tbl_products ||--o{ tbl_analytics_daily_product : aggregates

  tbl_users ||--o{ tbl_auth_identities : has
  tbl_users ||--o{ tbl_email_verifications : verifies
  tbl_users ||--o{ tbl_password_resets : resets

  tbl_users ||--o{ tbl_activity_logs : acts
  tbl_organizations ||--o{ tbl_activity_logs : in
  tbl_users ||--o{ tbl_notifications : receives
  tbl_users ||--o| tbl_user_notification_prefs : config

  tbl_users {
    uuid id PK
    string email
    string password_hash
    string name
    string avatar_url
    datetime created_at
  }

  tbl_organizations {
    uuid id PK
    string name
    string slug
    string branding
  }

  tbl_org_members {
    uuid org_id FK
    uuid user_id FK
    string role
  }

  tbl_mstr_plans {
    uuid id PK
    string code
    string name
    string quotas
  }

  tbl_subscriptions {
    uuid id PK
    uuid user_id FK
    uuid plan_id FK
    string status
    int seats_purchased
    string billing
    datetime current_period_start
    datetime current_period_end
  }

  tbl_license_assignments {
    uuid id PK
    uuid subscription_id FK
    uuid user_id FK
    string status
    string limits
    string usage_counters
    datetime created_at
  }

  tbl_assets {
    uuid id PK
    uuid org_id FK
    string type
    string url
    string mime_type
    int size_bytes
  }

  tbl_products {
    uuid id PK
    uuid org_id FK
    string name
    string slug
    string status
    uuid model_asset_id FK
    uuid created_by FK
  }

  tbl_configurators {
    uuid id PK
    uuid product_id FK
    string settings
  }

  tbl_hotspots {
    uuid id PK
    uuid product_id FK
    string label
    string description
    float pos_x
    float pos_y
    float pos_z
    string text_font
    string text_color
    string bg_color
    string action_type
    string action_payload
    int order_index
    datetime created_at
  }

  tbl_jobs {
    uuid id PK
    uuid product_id FK
    uuid image_asset_id FK
    uuid model_asset_id FK
    string status
    string engine
    datetime completed_at
  }

  tbl_publish_links {
    uuid id PK
    uuid product_id FK
    string public_id
    boolean is_enabled
    datetime expires_at
    string password_hash
  }

  tbl_galleries {
    uuid id PK
    uuid org_id FK
    string name
    string slug
    boolean is_public
  }

  tbl_gallery_items {
    uuid id PK
    uuid gallery_id FK
    uuid product_id FK
    int order_index
  }

  tbl_analytics_events {
    int id PK
    uuid org_id FK
    uuid product_id FK
    uuid publish_link_id FK
    string event_type
    datetime occurred_at
    string payload
  }

  tbl_analytics_daily_product {
    date day PK
    uuid org_id FK
    uuid product_id FK
    int views
    int engaged
    int adds_from_3d
  }

  tbl_auth_identities {
    uuid id PK
    uuid user_id FK
    string provider
    string provider_user_id
    string email
    datetime last_login_at
    string meta
  }

  tbl_email_verifications {
    uuid id PK
    uuid user_id FK
    string token
    datetime expires_at
    datetime used_at
  }

  tbl_password_resets {
    uuid id PK
    uuid user_id FK
    string token
    datetime expires_at
    datetime used_at
  }

  tbl_activity_logs {
    uuid id PK
    uuid actor_user_id FK
    uuid org_id FK
    string target_type
    uuid target_id
    string action
    string ip
    string user_agent
    datetime occurred_at
    string metadata
  }

  tbl_notifications {
    uuid id PK
    uuid user_id FK
    string type
    string title
    string body
    string data
    datetime read_at
    datetime created_at
  }

  tbl_user_notification_prefs {
    uuid user_id PK
    string channels
    string muted_types
  }
